force-app/main/default/objects/QuestionnaireQuestion__c/QuestionnaireQuestion__c.object-meta.xml
<CustomObject>
    <label>QuestionnaireQuestion</label>
    <nameField>
        <label>QuestionnaireQuestion Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>