force-app/main/default/objects/QuestionnaireQuestion__c/fields/QuestionLabel__c.field-meta.xml
<CustomField>
    <fullName>QuestionLabel__c</fullName>
    <label>QuestionLabel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>