force-app/main/default/objects/QuestionnaireQuestion__c/fields/QuestionnaireMaster__c.field-meta.xml
<CustomField>
    <fullName>QuestionnaireMaster__c</fullName>
    <label>QuestionnaireMaster</label>
    <referenceTo>Questionnaire__c</referenceTo>
    <relationshipLabel>QuestionnaireQuestion</relationshipLabel>
    <relationshipName>QuestionnaireDetail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>