force-app/main/default/objects/QuestionnaireQuestion__c/fields/QuestionType__c.field-meta.xml
<CustomField>
    <fullName>QuestionType__c</fullName>
    <label>QuestionType</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Radiobutton</fullName>
            </value>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Star</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>